Fix PDF table formatting by preventing page breaks in table rows

--- a/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
+++ b/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
@@ -292,20 +292,11 @@ h3.steps {
   }
 
     table {
-      border-collapse: collapse;
-  
-      th,
-      td {
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
+    tr {
+      page-break-inside: avoid;
       }
-  
-      tbody,
-      tr {
-        break-inside: avoid;
-        page-break-inside: avoid;
       }
-    }
+
   .animals h3.title {
     font-size: 24px;
     border-bottom: 1px solid $dark-grey;
